Modification to the index file, changed path of resume hyperlink.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<h1>Cameron Barclift</h1>
-	<a href="resume.html">Resume</a>
+	<a href="resume/resume.html">Resume</a>
 </head>
 
 <body>
