Changing landing page to "Coming soon"

--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <html>
 
 <head>
-	<h1>Cameron Barclift</h1>
-	<a href="resume/resume.html">Resume</a>
+	<h1>Coming soon...</h1>
 </head>
 
 <body>
-	<h1>Test 4</h1>
 </body>
 
 </html>
