--- a/resume/resume.html
+++ b/resume/resume.html
@@ -3,64 +3,37 @@
 <html>
 
 <head>
-<title>Resume</title>
+<title>Professional</title>
 </head>
 
 <body>
-<h1> Cameron Barclift</h1>
-	<h2>Goal</h2>
-		<p>To persue an intermship in the summer of 2013 to gain experience in the environmental engineering field.</p>
-
-	<h2>Education</h2>
-		<p>Tufts University, Medford, MA<br/>Major: Environmental Engineering<br/>Graduation May 2014<br/>Cumulative GPA: 2.96, Dean’s List 2 semesters</p>
-
-	<h2>Relavent Course Work</h2>		
-		<ul>
-		<li>Differential Equations</li>
-		<li>Engineering Graphics/CAD</li>
-		<li>Introduction to Computers in Engineering (Visual Basic for Excel)</li>
-		<li>Public Health Engineering</li>
-		<li>Fluid Mechanics</li>
-		<li>Environmental Engineering Principles</li>
-		<li>Technical and Managerial Communications</li>
-		<li>Environmental Geology</li>
-		<li>Environmental Chemistry</li>
-		<li>Physical Chemistry</li>
-		</ul>
-
-	<h2>Professional Experience</h2>
-		<ul>
-		<li>Dock Hand, Norfolk Naval Sailing Center and Marina, Norfolk, VA Jun 2009-Aug 2009</li>
-		<li>Financial Assistant, Waddell & Reed, Inc., Norfolk, VA Jun 2011 – Aug 2011, during which I designed client information 
-		input tool using Visual Basic for Excel.</li>
-		</ul>
-
-	<h2>Extra-Curricular Activities</h2>
-		<ul>
-		<li>Member, Tufts Varsity Sailing Team</li>
-		<li>Student member, American Academy of Environmental Engineers and Scientists (AAEES)</li>
-		<li>Member, BS of Environmental Engineering Program Review Board</li>
-		</ul>
-
-	<h2>Honors and Awards</h2>
-		<ul>
-		<li>Eagle Scout Rank 13, Nov 2008</li>
-		<li>Surface Navy Association VADM Robert L. Walters Scholarship as a college Freshman and Sophomore</li>
-		<li>Finalist for National Achievement Scholarship Program</li>
-		<li>Tufts Varsity Sailing Team Best Attendance Award Fall 2011</li>
-		</ul>
-
-	<h2>Skills</h2>
-	
-	<ul>
-	<li>Microsoft Office Suite</li>
-	<li>Familiar with the Linux Desktop Environment</li>
-	<li>AutoCAD</li>
-	<li>C++ and Visual Basic Programming</li>
-	<li>Adobe Illustrator</li>
-	<li>Familiar with Environmental Engineering field sampling techniques</li>
-	</ul>
-
+  <h1> Cameron Barclift</h1>
+  
+  <div class="photo">
+    <div class="container">
+    </div>
+  </div>
+  
+  <div class="latest-experience">
+    <div class="container">
+    </div>
+  </div>
+  
+  <div class="education">
+    <div class="container">
+    </div>
+  </div>
+  
+  <div class="projects">
+    <div class="contianer">
+    </div>
+  </div>
+  
+  <div class="past-experience">
+    <div class="contianer">
+    </div>
+  </div>
+  
 </body>
 
 
