Resume section coming soon.

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -3,37 +3,37 @@
 <html>
 
 <head>
-<title>Professional</title>
+    <title>Professional</title>
 </head>
 
 <body>
-  <h1> Cameron Barclift</h1>
-  
+  <h1> Coming soon...</h1>
+
   <div class="photo">
     <div class="container">
     </div>
   </div>
-  
+
   <div class="latest-experience">
     <div class="container">
     </div>
   </div>
-  
+
   <div class="education">
     <div class="container">
     </div>
   </div>
-  
+
   <div class="projects">
     <div class="contianer">
     </div>
   </div>
-  
+
   <div class="past-experience">
     <div class="contianer">
     </div>
   </div>
-  
+
 </body>
 
 
