Spelling and grammar

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                         <h3>Current Job</h3>
                         <div class="job-part">
                             <p>
-                                At <a href="http://www.karenclarkandco.com/">Karen Clark and Company</a>, we develop computer models of distasters for insurance companies, allowing them to better understand the cost of these disasters. Our transparent and open model is unique in the industry, and gives clients the tools to make their own model assumptions and risk views.  As a Risk Analyst I focus on the Data Analytics side of the things, prepping the information that goes into our software. I'm involved in the whole process: finding, cleaning, validating data; analyzing and visualizing the data, and coding the tools to support those; and finally interperting the data and acting on the results.
+                                At <a href="http://www.karenclarkandco.com/">Karen Clark and Company</a>, we develop computer models of disasters for insurance companies, allowing them to better understand the cost of these disasters. Our transparent and open model is unique in the industry, and gives clients the tools to make their own model assumptions and risk views.  As a Risk Analyst I focus on the Data Analytics side of the things, prepping the information that goes into our software. I'm involved in the whole process: finding, cleaning, validating data; analyzing and visualizing the data, and coding the tools to support those; and finally interpreting the data and acting on the results.
                             </p>
                             <br>
                             <p>
-                                I also help out with software development, improving existing code and experimenting with new technologies to incorperate into our product.  Some of the tools I've worked with include C#/.NET, SQL, CUDA/Parallel Computing, Python, GIS, R Stats, and VBA/Excel.
+                                I also help out with software development, improving existing code and experimenting with new technologies to incorporate into our product.  Some of the tools I've worked with include C#/.NET, SQL, CUDA/Parallel Computing, Python, GIS, R Stats, and VBA/Excel.
                             </p>
                             <br>
                             <p>
@@ -73,7 +73,7 @@
                         <ul>
                             <li>This website! It's my first foray into web design, and a work in progress, so it will update frequently.  I'm using the Bootstrap framework to get things running a little quicker, and hosting using GitHub pages.  The next step is to figure out some JavaScript.</li>
                             <li>Installing and configuring Arch Linux on my netbook.  It installs enough to turn on, but not much else.  I'm currently a bit stuck on getting the screen brightness keys to function, it turns out that's rather complicated.
-                            <li>Home network setup.  The router runs a VPN so I can log in anywhere, and a RaspberryPi 2 runs a media server to stream music anytime.</li>
+                            <li>Home network setup.  The router runs a VPN so I can log in anywhere, and a Raspberry Pi 2 runs a media server to stream music anytime.</li>
                             <li>Learning parallel computing with CUDA.  I have some basics down, now I need a dataset big enough to make CUDA worth it.</li>
                             <li>Android app development.  <a href="https://www.udacity.com/course/android-developer-nanodegree--nd801">Udacity</a> has a great set of courses to get started.</li>
                         </ul>
