--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </p>
                         <ul>
                             <li>This website! It's my first foray into web design, and a work in progress, so it will update frequently.  I'm using the Bootstrap framework to get things running a little quicker, and hosting using GitHub pages.  The next step is to figure out some JavaScript.</li>
-                            <li>Installing and configuring Arch Linux on my netbook.  It installs enough to turn on, but not much else.  I'm currently a bit stuck on getting the screen brightness keys to function, it turns out that's rather complicated.
+                            <li>Installing and configuring Arch Linux on my netbook.  It installs enough to turn on, but not much else; the rest is up to me.  I'm currently a bit stuck on getting the screen brightness keys to function, it turns out that's rather complicated.
                             <li>Home network setup.  The router runs a VPN so I can log in anywhere, and a Raspberry Pi 2 runs a media server to stream music anytime.</li>
                             <li>Learning parallel computing with CUDA.  I have some basics down, now I need a dataset big enough to make CUDA worth it.</li>
                             <li>Android app development.  <a href="https://www.udacity.com/course/android-developer-nanodegree--nd801">Udacity</a> has a great set of courses to get started.</li>
