--- a/index.html
+++ b/index.html
@@ -8,81 +8,96 @@
 </head>
 
 <body>
-    <div class="nav">
-        <div class="container">
-            <ul class="pull-left">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="resume/resume.html">Professional</a></li>
-            </ul>
-            <ul class="pull-right">
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-8 col-offset-4">
-            <div class="jumbotron first">
-                <div class="container">
-                    <h1>Cameron Barclift</h1>
-                </div>
+    <div class = "body-container">
+        <div class="nav">
+            <div class="container">
+                <ul class="pull-left">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="resume/resume.html">Professional</a></li>
+                </ul>
+                <ul class="pull-right">
+                    <li><a href="#">Contact</a></li>
+                </ul>
             </div>
         </div>
-        <div class="col-md-4">
-            <div class="jumbotron second">
-                <div class="container">
-                    <img src="res/images/SailJumbo.jpg">
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <div class="currentStuff">
-        <div class="container">
-            <h2>What I'm doing now</h2>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="curr-job">
-                        <h3>Current Job</h3>
-                        <div class="job-part">
-                            <p>
-                                At <a href="http://www.karenclarkandco.com/">Karen Clark and Company</a>, we develop computer models of disasters for insurance companies, allowing them to better understand the cost of these disasters. Our transparent and open model is unique in the industry, and gives clients the tools to make their own model assumptions and risk views.  As a Risk Analyst I focus on the Data Analytics side of the things, prepping the information that goes into our software. I'm involved in the whole process: finding, cleaning, validating data; analyzing and visualizing the data, and coding the tools to support those; and finally interpreting the data and acting on the results.
-                            </p>
-
-                            <p>
-                                I also help out with software development, improving existing code and experimenting with new technologies to incorporate into our product.  Some of the tools I've worked with include C#/.NET, SQL, CUDA/Parallel Computing, Python, GIS, R Stats, and VBA/Excel.
-                            </p>
-                            
-                            <p>
-                                To learn more about KCC or myself, follow the links below.
-                            </p>
-                            <ul class="list-inline">
-                                <li><a href="http://www.karenclarkandco.com/">KCC</a></li>
-                                <li><a href="resume/resume.html">Cameron</a></li>
-                            </ul>
+        <!--Title Row-->
+        <div class="title-row">
+            <div class"row">
+                <div class="col-md-8 col-offset-4">
+                    <div class="jumbotron first">
+                        <div class="container">
+                            <h1>Cameron Barclift</h1>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-md-6">
-                    <div class="curr-projects">
-                        <h3>Current Projects</h3>
-                        <p>
-                            Some of my current side projects are below:
-                        </p>
-                        <ul>
-                            <li>This website! It's my first foray into web design, and a work in progress, so it will update frequently.  I'm using the Bootstrap framework to get things running a little quicker, and hosting using GitHub pages.  The next step is to figure out some JavaScript.</li>
-                            <li>Installing and configuring Arch Linux on my netbook.  It installs enough to turn on, but not much else; the rest is up to me.  I'm currently a bit stuck on getting the screen brightness keys to function, it turns out that's rather complicated.
-                            <li>Home network setup.  The router runs a VPN so I can log in anywhere, and a Raspberry Pi 2 runs a media server to stream music anytime.</li>
-                            <li>Learning parallel computing with CUDA.  I have some basics down, now I need a dataset big enough to make CUDA worth it.</li>
-                            <li>Android app development.  <a href="https://www.udacity.com/course/android-developer-nanodegree--nd801">Udacity</a> has a great set of courses to get started.</li>
-                        </ul>
+                <div class="col-md-4">
+                    <div class="jumbotron second">
+                        <div class="container">
+                            <img src="res/images/SailJumbo.jpg">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
+        <div class="currentStuff">
+            <div class="container">
+                <h2>What I'm doing now</h2>
+                <div class="row">
+                    <!--Current Job-->
+                    <div class="col-md-6">
+                        <div class="curr-job">
+                            <h3>Current Job</h3>
+                            <div class="job-part">
+                                <p>
+                                    At <a href="http://www.karenclarkandco.com/">Karen Clark and Company</a>, we develop computer models of disasters for insurance companies, allowing them to better understand the cost of these disasters. Our transparent and open model is unique in the industry, and gives clients the tools to make their own model assumptions and risk views.  As a Risk Analyst I focus on the Data Analytics side of the things, prepping the information that goes into our software. I'm involved in the whole process: finding, cleaning, validating data; analyzing and visualizing the data, and coding the tools to support those; and finally interpreting the data and acting on the results.
+                                </p>
+
+                                <p>
+                                    I also help out with software development, improving existing code and experimenting with new technologies to incorporate into our product.  Some of the tools I've worked with include C#/.NET, SQL, CUDA/Parallel Computing, Python, GIS, R Stats, and VBA/Excel.
+                                </p>
+
+                                <p>
+                                    To learn more about KCC or myself, follow the links below.
+                                </p>
+                                <ul class="list-inline">
+                                    <li><a href="http://www.karenclarkandco.com/">KCC</a></li>
+                                    <li><a href="resume/resume.html">Cameron</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--Side Projects-->
+                    <div class="col-md-6">
+                        <div class="curr-projects">
+                            <h3>Current Projects</h3>
+                            <div class="projects-part">
+                                <p>
+                                    Some of my current side projects are below:
+                                </p>
+                                <ul>
+                                    <li>This website! It's my first foray into web design, and a work in progress, so it will update frequently.  I'm using the Bootstrap framework to get things running a little quicker, and hosting using GitHub pages.  The next step is to figure out some JavaScript.</li>
+                                    <li>Installing and configuring Arch Linux on my netbook.  It installs enough to turn on, but not much else; the rest is up to me.  I'm currently a bit stuck on getting the screen brightness keys to function, it turns out that's rather complicated.
+                                    <li>Home network setup.  The router runs a VPN so I can log in anywhere, and a Raspberry Pi 2 runs a media server to stream music anytime.</li>
+                                    <li>Learning parallel computing with CUDA.  I have some basics down, now I need a dataset big enough to make CUDA worth it.</li>
+                                    <li>Android app development.  <a href="https://www.udacity.com/course/android-developer-nanodegree--nd801">Udacity</a> has a great set of courses to get started.</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="powered-by">
+            <ul>
+                <li>Hosted on <a href="https://pages.github.com/">Github Pages</a></li>
+                <li>Powered by <a href="http://getbootstrap.com/">Bootstrap</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 
 </html>
