--- a/resume/resume.html
+++ b/resume/resume.html
@@ -3,41 +3,145 @@
 <html>
 
 <head>
-    <title>Professional</title>
+    <link rel="stylesheet" href="../bootstrap-3.3.5-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../res/css/navbar.css">
+    <link rel="stylesheet" href="../res/css/common.css">
+    <link rel="stylesheet" href="../res/css/color-pallete.css">
+    <link rel="stylesheet" href="resume.css">
 </head>
 
 <body>
-  <h1> Coming soon...</h1>
-
-  <div class="photo">
-    <div class="container">
+    <div class="nav color-background-4">
+        <div class="container">
+            <ul class="pull-left">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="resume.html">Professional</a></li>
+            </ul>
+            <ul class="pull-right">
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
     </div>
-  </div>
 
-  <div class="latest-experience">
-    <div class="container">
+    <div class="row first-row color-background-0">
+        <div class="row-container color-background-0">
+            <div class="col-md-4">
+                <div class="photo">
+                    <div class="container">
+                        <img src="../res/images/CbProfressionalProfile.jpg">
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-8">
+                <!--<div class="summary">-->
+                    <div class="summary container color-background-1">
+                        <h1>Cameron Barclift</h1>
+                        <h2>Risk Analyst</h2>
+                        <h3>See my profile on <a href="https://www.linkedin.com/in/cameronbarclift">LinkedIn</a></h3>
+                        <h3>View and download my <a href="../res/docs/CameronBarclift_Resume.pdf" target="_blank">paper resume</a></h3>
+                    </div>
+                <!--</div>-->
+            </div>
+        </div>
     </div>
-  </div>
 
-  <div class="education">
-    <div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="latest-experience">
+                <div class="container">
+                    <h1>Current Position</h1>
+                    <div class="job-stuff">
+                        <h2>Risk Analyst at Karen Clark and Company</h2>
+                        <h3>Boston MA, December 2014 - Present</h3>
+                        <p>
+                            Summary
+                        </p>
+                        <ul>
+                            <li>Conduct short term ad hoc and long term analyses</li>
+                            <li>Develop and maintain databases of insurance industry economic exposure</li>
+                            <li>Develop and maintain databases of insurance industry economic exposure</li>
+                            <li>Develop a framework for calculating damage rates to relate hazard intensity to property loss</li>
+                            <li>Prepare clear, informative visualizations for qualitative analyses and presentations</li>
+                            <li>Validate expert windstorm footprints using public and proprietary data</li>
+                            <li>Support our experts in developing and refining stochastic and characteristic models for Tropical Cyclone, Storm Surge, and Earthquake hazards</li>
+                            <li>Improve and expand existing algorithms to increase performance and maintainability</li>
+                            <li>Leverage a variety of software packages to support the above roles, including:
+                            C#/.Net, SQL Server, C++, CUDA/Parallel Computing, R Statistics Language, GIS (ESRI/ArcGIS, QGIS),  Excel/VBA, Python</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="education">
+                <div class="container">
+                    <h1>Education</h1>
+                    <div class="formal-education">
+                        <h2>Tufts University</h2>
+                        <ul>
+                            <li>B.S. Environmental Engineering, May 2014</li>
+                        </ul>
+
+                        <h2>Norfolk Collegiate School, June 2010</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 
-  <div class="projects">
-    <div class="contianer">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="past-experience">
+                <div class="container">
+                    <h1>Past Experience</h1>
+                    <div class="job-one">
+                        <h2>Engineering Intern at Cook Environmental Services, Inc. </h2>
+                        <h3>Walnut Creek CA, May - August 2013</h3>
+                        <ul>
+                            <li>Conducted field sampling, site assessment, site monitoring, and site investigations</li>
+                            <li>Prepared drafts of site closure reports including tables, figures, and relevant calculations</li>
+                            <li>Represented P.E. during well installations and soil boring collections</li>
+                            <li>Analyzed data from underground storage tanks (USTs) and fuel contamination sites</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="online-courses">
+                <div class="container">
+                    <h1>Online Courses</h1>
+                    <h2>Code Academy</h2>
+                    <h3>Profile</h3>
+                    <div class="completed">
+                        <h4>Completed</h4>
+                        <ul>
+                            <li>HTML and CSS</li>
+                            <li>Make a Website</li>
+                        </ul>
+                    </div>
+                    <div class="in-progress">
+                        <h4>In Progress</h4>
+                        <ul>
+                            <li>JavaScript</li>
+                        </ul>
+                    </div>
+
+                    <h2>Udacity</h2>
+                    <div class="in-progress">
+                        <h4>In Progress</h4>
+                        <ul>
+                            <li>Android Development for Beginners</li>
+                            <li>Developing Android Apps</li>
+                            <li>Introduction to Parallel Computing</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </div>
-  </div>
-
-  <div class="past-experience">
-    <div class="contianer">
-    </div>
-  </div>
-
 </body>
-
-
-
-
 
 </html>
