--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 
 <head>
     <link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="res/css/navbar.css">
+    <link rel="stylesheet" href="res/css/color-pallete.css">
     <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
     <div class = "body-container">
-        <div class="nav">
+        <div class="nav color-background-4">
             <div class="container">
                 <ul class="pull-left">
                     <li><a href="index.html">Home</a></li>
