little save commit

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -34,19 +34,19 @@
             </div>
 
             <div class="col-md-8">
-                <!--<div class="summary">-->
-                    <div class="summary container color-background-1">
+                <div class="summary">
+                    <div class="container color-background-1">
                         <h1>Cameron Barclift</h1>
                         <h2>Risk Analyst</h2>
                         <h3>See my profile on <a href="https://www.linkedin.com/in/cameronbarclift">LinkedIn</a></h3>
                         <h3>View and download my <a href="../res/docs/CameronBarclift_Resume.pdf" target="_blank">paper resume</a></h3>
                     </div>
-                <!--</div>-->
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="row">
+    <div class="row second-row">
         <div class="col-md-6">
             <div class="latest-experience">
                 <div class="container">
